--- a/srcpkgs/pine64-kernel/files/config
+++ b/srcpkgs/pine64-kernel/files/config
@@ -5866,7 +5866,7 @@ CONFIG_SND_SUN8I_CODEC=m
 CONFIG_SND_SUN8I_CODEC_ANALOG=m
 CONFIG_SND_SUN50I_CODEC_ANALOG=m
 CONFIG_SND_SUN4I_I2S=m
-# CONFIG_SND_SUN4I_SPDIF is not set
+CONFIG_SND_SUN4I_SPDIF=m
 CONFIG_SND_SUN8I_ADDA_PR_REGMAP=m
 # end of Allwinner SoC Audio support
 
@@ -5960,7 +5960,7 @@ CONFIG_SND_SOC_RT5677_SPI=m
 # CONFIG_SND_SOC_SGTL5000 is not set
 CONFIG_SND_SOC_SIMPLE_AMPLIFIER=m
 # CONFIG_SND_SOC_SIRF_AUDIO_CODEC is not set
-# CONFIG_SND_SOC_SPDIF is not set
+CONFIG_SND_SOC_SPDIF=m
 # CONFIG_SND_SOC_SSM2305 is not set
 # CONFIG_SND_SOC_SSM2602_SPI is not set
 # CONFIG_SND_SOC_SSM2602_I2C is not set
